# min_qsim

./: .gitignore  LICENSE  README.md  pyproject.toml
src/min_qsim/: __init__.py  circuit.py  debug.py  gates.py  measurement.py  state.py
tests/: test_gates.py
