[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "min-qsim"
version = "0.1.0"
description = "A minimal n-qubit statevector quantum circuit simulator"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "numpy>=1.24",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourhandle/min_qsim"
Repository = "https://github.com/yourhandle/min_qsim"

[tool.setuptools.packages.find]
where = ["src"]
